--- a/style.css
+++ b/style.css
@@ -13,5 +13,13 @@ img {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    width: 45%;
+}
+
+.counterSection {
+    padding-top: 10px;
+    text-align: center;
+    font-family: "Comic Sans MS";
+    font-size: 15px;
+    color: #FFFFFF;
 }
